2004-02-11  Jakub Jelinek  <jakub@redhat.com>

	* posix/regexec.c (check_node_accept_bytes): Return 0 if char_len is 0.
	(find_collation_sequence_value): Don't look beyond end of
	SYMB_EXTRAMB table.
	* posix/Makefile (tests): Add bug-regex23.
	(bug-regex23-ENV): New.
	* posix/bug-regex23.c: New file.

2004-02-10  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/times.c (__times): Use union instead of cast.
	* sysdeps/mach/hurd/sendmsg.c (__libc_sendmsg): Likewise.

	* sysdeps/mach/hurd/configure.in: Move `retcode' check to ...
	* sysdeps/mach/configure.in: ... here.
	* sysdeps/mach/hurd/configure: Regenerated.
	* sysdeps/mach/configure.in: Regenerated.

2004-02-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/setenv.c (__add_to_environ): Don't let the
	temporary copies of the variables accumulate on the stack.

	* stdio-common/_i18n_number.h: Finish last patch.

2004-02-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i686/memcmp.S: New file.  Patch by HJ Lu.

2003-12-05  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/i386/syscalls.list: Turn vm86 into vm86old
	for vm86@GLIBC_2.0 version.  Add new vm86@GLIBC_2.3.4.
	* sysdeps/unix/sysv/linux/i386/Versions (libc: GLIBC_2.3.4): Add vm86.
	* sysdeps/unix/sysv/linux/i386/sys/vm86.h: Update vm86 prototype.

2004-02-09  Ulrich Drepper  <drepper@redhat.com>

	* nis/ypclnt.c: Cleanup last patch.

2004-02-09  Andreas Jaeger  <aj@suse.de>

	* configure.in: Remove glibcbug creation.
	* configure: Regenerated.

	* sysdeps/x86_64/fpu/s_copysignf.S: Only load 4 bytes.

2004-02-03  Thorsten Kukuk  <kukuk@suse.de>

	* nis/ypclnt.c (__yp_bind_client_create): New, small chunk
	of duplicated code from __yp_bind.
	(__yp_bind_file): New, binding dir code from __yp_bind.
	(__yp_bind_client_create): New, ypbind code from __yp_bind.
	(__ypclnt_call): New, make NIS query.
	(do_ypcall): At first use cached data, then try data from
	binding directory, after this ask ypbind for a working ypserv.