@@ -1,3 +1,8 @@
+2004-02-12  Ulrich Drepper  <drepper@redhat.com>
+
+	* locale/programs/locale.c (show_locale_vars): Don't print a value
+	for LANG if it is not set.
+
 2004-02-11  Jakub Jelinek  <jakub@redhat.com>
 
 	* posix/regexec.c (check_node_accept_bytes): Return 0 if char_len is 0.
